--- a/src/components/Badge/Badge.scss
+++ b/src/components/Badge/Badge.scss
@@ -1,13 +1,14 @@
 .layout {
-    height: 120px;
-    width: 120px;
+    height: 80px;
+    width: 80px;
     background: linear-gradient(#f14654, #97041b);
     border-radius: 50%;
     position: absolute;
-    top: -65px;
+    top: -35px;
+    left: 70px;
     box-shadow: 0px 2px 4px rgba(#000, 0.4);
     i {
-        font-size: 40px;
-        line-height: 120px;
+        font-size: 30px;
+        line-height: 80px;
     }
 }
