--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -1,6 +1,6 @@
 .layout {
-    min-width: 542px;
-    height: 690px;
+    width: 510px;
+    height: 576px;
     background: rgb(0,0,0);
     color: rgb(255,255,255);
     padding: 20px;
