--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -3,6 +3,6 @@
     height: 576px;
     background: rgb(0,0,0);
     color: rgb(255,255,255);
-    padding: 20px;
+    padding: 35px 20px 20px 20px;
     float: left;
 }
