--- a/src/components/Wrapper/Wrapper.scss
+++ b/src/components/Wrapper/Wrapper.scss
@@ -1,3 +1,14 @@
-.layout {
+.scroller {
+    &::-webkit-scrollbar {
+        width: 8px;
+        height: 8px;
+    }
+    &::-webkit-scrollbar-thumb {
+        border-radius: 8px;
+        background-color: #333;
+    }
 
+    &::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+    }
 }
