--- a/src/components/Badge/Badge.scss
+++ b/src/components/Badge/Badge.scss
@@ -1,14 +1,21 @@
-.layout {
-    height: 80px;
+.container {
     width: 80px;
+    height: 80px;
+    margin: 0 auto;
+    display: inline-block;
+    position: relative;
+}
+
+.layout {
+    height: 100%;
+    width: 100%;
     border-radius: 50%;
+    position: relative;
+    z-index: 2;
 }
 
 .footer, .endCall {
     background: linear-gradient(#f14654, #97041b);
-    position: absolute;
-    top: -35px;
-    left: 70px;
     box-shadow: 0px 2px 4px rgba(#000, 0.4);
     i {
         font-size: 30px;
@@ -19,11 +26,8 @@
 .endCall {
     position: static;
     display: inline-block;
-    width: 60px;
-    height: 60px;
     margin-top: 25px;
     i {
-        line-height: 60px;
         font-size: 24px;
         transform: rotate(133deg);
     }
@@ -32,16 +36,58 @@
 .talk {
     background: #fff;
     color: rgb(0,186,210);
-    width: 130px;
-    height: 130px;
     border: 3px solid rgb(0,186,210);
     text-align: center;
     text-transform: uppercase;
-    display: inline-block;
-    margin: 0 15px;
     i {
         display: block;
         font-size: 40px;
         margin: 25px 0 10px 0;
+    }
+}
+
+.pulse {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    opacity: .6;
+    background: #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    animation: pulsate 5s ease-out;
+}
+
+@keyframes pulsate {
+    0% {
+        transform: scale(1, 1);
+    }
+    10% {
+        transform: scale(1.2, 1.2);
+    }
+    20% {
+        transform: scale(1.1, 1.1);
+    }
+    30% {
+        transform: scale(1.3, 1.3);
+    }
+    40% {
+        transform: scale(1.1, 1.1);
+    }
+    50% {
+        transform: scale(1, 1);
+    }
+    60% {
+        transform: scale(1.2, 1.2);
+    }
+    70% {
+        transform: scale(1, 1);
+    }
+    80% {
+        transform: scale(1.3, 1.3);
+    }
+    100% {
+        transform: scale(1, 1);
     }
 }
